[package]
name = "aubuchon_disount_append_tool"
version = "0.1.1"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio"] }
csv = { version = "1.3.1" }
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.26"
env_logger = "0.11.7"
chrono = { version = "0.4.40", features = ["now", "clock"] }
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive", "alloc", "serde_derive"] }
database-common-lib = { git = "https://github.com/Mardens-Inc/database-common-lib.git" }